--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "git.terminalAuthentication": false
+    "git.terminalAuthentication": false,
+    "python.analysis.autoImportCompletions": true
 }
