Added db support for file processing.

--- a/partial-solutions-1/bootcamp-config-ssv.yaml
+++ b/partial-solutions-1/bootcamp-config-ssv.yaml
@@ -53,8 +53,8 @@ models:
   multilingual-cross-encoder: cross-encoder/stsb-distilroberta-base
   spacy-model: en_core_web_sm
   spacy-sentence-embedding-model: distiluse-base-multilingual-cased-v2
-  # device: cuda
-  device: cpu
+  device: cuda
+  # device: cpu
   sentence-embedding:
     normalize-embeddings: True
 
