--- a/project-semantic-search/bootcamp-config.yaml
+++ b/project-semantic-search/bootcamp-config.yaml
@@ -14,13 +14,12 @@
 #  Relational database configuration information
 #
 database:
-  variant: postgres                      # the type of database (mysql, postgres, oracle, etc)
+  variant: mysql                      # the type of database (mysql, postgres, oracle, etc)
   server: localhost                   # the hostname of the server
-  port: 5432                          # the port the db-server is listening
-  username: postgres            # username for user with write privileges
+  port: 3306                          # the port the db-server is listening
+  username: supportvectors            # username for user with write privileges
   password: supportvectors.123        # password of the user
-  search-schema: semantic-search                   # database schema whose tables will be accessed
-  # chunk-schema: semantic-chunks.semantic-search                   # database schema whose tables will be accessed
+  schema: documents                   # database schema whose tables will be accessed
   #
   # The JDBC information
   #
@@ -33,8 +32,7 @@ database:
 # Document source directory
 #
 documents:
-  source-dir: to-be-processed
-  destination-dir: processed
+  source-dir: /home/asifqamar/bootcamp/docs
 
 #
 # Spark details
@@ -48,20 +46,17 @@ spark:
 # Models
 #
 models:
-  multilingual-sentence-encoder: Salesforce/SFR-Embedding-Mistral
-#  multilingual-sentence-encoder: distiluse-base-multilingual-cased-v2
+  multilingual-sentence-encoder: distiluse-base-multilingual-cased-v2
 #  multilingual-cross-encoder:  sentence-transformers/LaBSE
   multilingual-cross-encoder: cross-encoder/stsb-distilroberta-base
   spacy-model: en_core_web_sm
-  spacy-sentence-embedding-model: Salesforce/SFR-Embedding-Mistral
-#  spacy-sentence-embedding-model: distiluse-base-multilingual-cased-v2
+  spacy-sentence-embedding-model: distiluse-base-multilingual-cased-v2
   device: cuda
-  # device: cpu
   sentence-embedding:
     normalize-embeddings: True
 
 text:
-  chunk-size: 512
+  chunk-size: 2000
   chunk-similarity-threshold: 0.2
 
 #
@@ -78,4 +73,4 @@ elasticsearch:
 
 search:
   faiss:
-    index_file: faiss_index
+    index_file: /home/asifqamar/faiss_index_file
