--- a/project-semantic-search/bootcamp-config.yaml
+++ b/project-semantic-search/bootcamp-config.yaml
@@ -51,7 +51,7 @@ models:
   multilingual-cross-encoder: cross-encoder/stsb-distilroberta-base
   spacy-model: en_core_web_sm
   spacy-sentence-embedding-model: distiluse-base-multilingual-cased-v2
-  device: cuda
+  device: cpu
   sentence-embedding:
     normalize-embeddings: True
 
